--- a/RFCRestyle/popup.html
+++ b/RFCRestyle/popup.html
@@ -13,6 +13,7 @@
       <fieldset name="prfls"><legend>Customisable profiles</legend></fieldset>
       <label title="Uncheck this before printing">Restyle?<input name="styl" type="checkbox"></label>
       <label class="r">Auto redirect TXT to HTML?<input name="rdrct" type="checkbox"></label>
+      <label>Auto redirect BCP to RFC?<input name="bcp" type="checkbox"></label>
       <hr>
       <fieldset name="stylrs">
         <label title="Hide page separators and chunks of white-space">Continuous presentation?<input name="continuous" type="checkbox"></label>
