--- a/RFCRestyle/popup.html
+++ b/RFCRestyle/popup.html
@@ -13,7 +13,7 @@
       <fieldset name="prfls"><legend>Customisable profiles</legend></fieldset>
       <label title="Uncheck this before printing">Restyle?<input name="styl" type="checkbox"></label>
       <label class="r">Auto redirect TXT to HTML?<input name="rdrct" type="checkbox"></label>
-      <label>Auto redirect BCP to RFC?<input name="bcp" type="checkbox"></label>
+      <label class="r">Auto redirect BCP to RFC?<input name="bcp" type="checkbox"></label>
       <hr>
       <fieldset name="stylrs">
         <label title="Hide page separators and chunks of white-space">Continuous presentation?<input name="continuous" type="checkbox"></label>
@@ -26,8 +26,8 @@
         <label><input name="bodybg" type="color">Body content</label>
         <label class="r">Light text<input name="lght" type="color"></label>
         <label><input name="vha" type="color">Active, visited links</label>
-        <label><input name="lnk" type="color">Inactive, unvisited links</label>
-        <label>Bold links<input name="lnkwght" type="checkbox"></label>
+        <label class="d"><input name="lnk" type="color">Inactive, unvisited links</label>
+        <label class="r a">Bold links?<input name="lnkwght" type="checkbox"></label>
         <fieldset name="uls"><legend>Link underline</legend></fieldset>
       </fieldset>
     </form>
