--- a/Deminified/popup.html
+++ b/Deminified/popup.html
@@ -16,6 +16,7 @@
 			<label class="r">Auto redirect BCP to RFC?<input name="bcp" type="checkbox"></label>
 			<hr>
 			<fieldset name="stylrs">
+				<label>Keep Table of Contents open?<input name="kto" type="checkbox"></label>
 				<label title="Hide page separators and chunks of white-space">Continuous presentation?<input name="continuous" type="checkbox"></label>
 				<label>Fuzzy border<input name="fzzy" type="range" min="0" max="20"></label>
 				<label>Font size<input name="fntsz" type="range" min="8" max="32"></label>
