stopped action on rfc-editor non .txt docs + minor efficiency; v3.6.0

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,13 @@
 			--><a href="https://support.google.com/chrome/answer/165139" rel="external" title="support.google.com" target="_blank">learn more</a><!--
 			--><a href="https://chrome.google.com/sync" rel="external" title="chrome.google.com/sync" target="_blank">your synced data</a><!--
 			--><hr><!--
-			--><fieldset name="prfls"><legend>Customisable profiles</legend></fieldset><!--
+			--><fieldset name="prfls"><legend>Customisable profiles</legend><!--
+				--><label>Foo<input name="prfl" type="radio" value="Foo"></label><!--
+				--><label>Bar<input name="prfl" type="radio" value="Bar"></label><!--
+				--><label>Baz<input name="prfl" type="radio" value="Baz"></label><!--
+				--><label>Qux<input name="prfl" type="radio" value="Qux"></label><!--
+				--><label>Quux<input name="prfl" type="radio" value="Quux"></label><!--
+			--></fieldset><!--
 			--><label title="Uncheck this before printing">Restyle?<input name="styl" type="checkbox"></label><!--
 			--><label class="r">Auto redirect TXT to HTML?<input name="rdrct" type="checkbox"></label><!--
 			--><hr><!--
@@ -27,7 +33,12 @@
 				--><label><input name="vha" type="color">Active, visited links</label><!--
 				--><label class="d"><input name="lnk" type="color">Inactive, unvisited links</label><!--
 				--><label class="r a">Bold links?<input name="lnkwght" type="checkbox"></label><!--
-				--><fieldset name="uls"><legend>Link underline</legend></fieldset><!--
+				--><fieldset name="uls"><legend>Link underline</legend><!--
+					--><label>none<input name="ul" type="radio" value="none"></label><!--
+					--><label>solid<input name="ul" type="radio" value="solid"></label><!--
+					--><label>dashed<input name="ul" type="radio" value="dashed"></label><!--
+					--><label>dotted<input name="ul" type="radio" value="dotted"></label><!--
+				--></fieldset><!--
 			--></fieldset><!--
 		--></form><!--
 		--><script type="text/javascript" src="popup.js"></script><!--
